src/objects/MG_Movie__c.object
<CustomObject>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Backdrop_Path__c</fullName>
        <label>Backdrop Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Genres__c</fullName>
        <label>Genres</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Action</fullName>
                </value>
                <value>
                    <fullName>Adventure</fullName>
                </value>
                <value>
                    <fullName>Animation</fullName>
                </value>
                <value>
                    <fullName>Comedy</fullName>
                </value>
                <value>
                    <fullName>Crime</fullName>
                </value>
                <value>
                    <fullName>Documentary</fullName>
                </value>
                <value>
                    <fullName>Drama</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>Fantasy</fullName>
                </value>
                <value>
                    <fullName>History</fullName>
                </value>
                <value>
                    <fullName>Horror</fullName>
                </value>
                <value>
                    <fullName>Music</fullName>
                </value>
                <value>
                    <fullName>Mystery</fullName>
                </value>
                <value>
                    <fullName>Romance</fullName>
                </value>
                <value>
                    <fullName>Science Fiction</fullName>
                </value>
                <value>
                    <fullName>Thriller</fullName>
                </value>
                <value>
                    <fullName>TV Movie</fullName>
                </value>
                <value>
                    <fullName>War</fullName>
                </value>
                <value>
                    <fullName>Western</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Homepage__c</fullName>
        <label>Homepage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overview__c</fullName>
        <label>Overview</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Popularity__c</fullName>
        <label>Popularity</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Poster_Path__c</fullName>
        <label>Poster Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Date__c</fullName>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <label>Revenue</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RuntimeRuntime__c</fullName>
        <label>Runtime</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Movie</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>MG_Movie Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Movies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>